# Election-Generator

./: CMakeLists.txt  Humans.txt  Makefile  Party.cpp  election.cpp  election.h  electorates.cpp  entities.cpp  entities.h  events.cpp  events.h  issue.h  main.cpp  newParty.h  random.h
