cmake_minimum_required(VERSION 3.26)
project(ass2v2)

set(CMAKE_CXX_STANDARD 17)

add_executable(ass2v2 main.cpp
        Party.cpp
        Party.cpp
        issue.h
        election.cpp
        election.h
        random.h
        electorates.cpp
        entities.cpp
        entities.h
        newParty.h
        events.cpp
        events.h)
